# Angel

./: CMakeLists.txt  README.md
cmake/: angelConfig.cmake.in
include/Angel/: Angel.h
src/: AssetManager.h  AssetRegistry.h  Audio.cpp  Audio.h  Background.cpp  Background.h  Camera.cpp  Camera.h  CharacterModel.cpp  CharacterModel.h  Collider.h  Draw.cpp  Draw.h  Engine.cpp  Engine.h  Entity.h  Font.cpp  Font.h  Input.cpp  Input.h  Log.cpp  Log.h  Render.cpp  Render.h  RenderWrapper.cpp  RenderWrapper.h  ResourceLoading.cpp  ResourceLoading.h  Sound.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  SpriteSheet.h  Stage.h  StaticLoader.cpp  StaticLoader.h  Text.cpp  Text.h  TextureAtlas.h  (+6 more)
src/Geometry/: Rect.h
